# temp

./: .gitignore  CMakeLists.txt  README.md  lupdate.sh
.tx/: config
debian/: changelog  control  copyright  dcc-passkey-plugin.install  deepin-passkey.install
file/translate/dcc-passkey-plugin/: dcc-passkey-plugin.qrc  dcc-passkey-plugin.ts  dcc-passkey-plugin_ady.ts  dcc-passkey-plugin_af.ts  dcc-passkey-plugin_af_ZA.ts  dcc-passkey-plugin_ak.ts  dcc-passkey-plugin_am.ts  dcc-passkey-plugin_am_ET.ts  dcc-passkey-plugin_ar.ts  dcc-passkey-plugin_ar_EG.ts  dcc-passkey-plugin_ast.ts  dcc-passkey-plugin_az.ts  dcc-passkey-plugin_bg.ts  dcc-passkey-plugin_bn.ts  dcc-passkey-plugin_bo.ts  dcc-passkey-plugin_bqi.ts  dcc-passkey-plugin_br.ts  dcc-passkey-plugin_ca.ts  dcc-passkey-plugin_cgg.ts  dcc-passkey-plugin_cs.ts  dcc-passkey-plugin_da.ts  dcc-passkey-plugin_de.ts  dcc-passkey-plugin_de_CH.ts  dcc-passkey-plugin_de_DE.ts  dcc-passkey-plugin_el.ts  dcc-passkey-plugin_el_GR.ts  dcc-passkey-plugin_en_AU.ts  dcc-passkey-plugin_en_GB.ts  dcc-passkey-plugin_en_NO.ts  dcc-passkey-plugin_en_US.ts  dcc-passkey-plugin_eo.ts  dcc-passkey-plugin_es.ts  dcc-passkey-plugin_es_419.ts  dcc-passkey-plugin_es_AR.ts  dcc-passkey-plugin_es_CL.ts  dcc-passkey-plugin_es_MX.ts  dcc-passkey-plugin_et.ts  dcc-passkey-plugin_eu.ts  dcc-passkey-plugin_fa.ts  dcc-passkey-plugin_fi.ts  (+65 more)
file/translate/service/: ady.po  af.po  af_ZA.po  ak.po  am.po  am_ET.po  ar.po  ar_EG.po  ast.po  az.po  bg.po  bn.po  bo.po  bqi.po  br.po  ca.po  cgg.po  cs.po  da.po  de.po  de_CH.po  de_DE.po  deepin-passkey-service.pot  el.po  el_GR.po  en_AU.po  en_GB.po  en_NO.po  en_US.po  eo.po  es.po  es_419.po  es_AR.po  es_CL.po  es_MX.po  et.po  eu.po  fa.po  fi.po  fil.po  (+64 more)
file/xml/: com.deepin.Passkey.xml  org.deepin.Passkey1.xml
misc/: CMakeLists.txt
misc/dbus/system-services/: com.deepin.Passkey.service  org.deepin.Passkey1.service
misc/dbus/system.d/: com.deepin.Passkey.conf  org.deepin.Passkey1.conf
misc/dsg-configs/: org.deepin.dde.passkey.dcc-plugin.json
misc/polkit/: com.deepin.Passkey.policy  com.deepin.dde.passkey.dcc-plugin.policy  org.deepin.Passkey1.policy
misc/systemd/system/: deepin-passkey.service
src/: CMakeLists.txt  com.deepin.Passkey.xml  errcode.h  main.c  manager.c  manager.h  service-sdbus.c  service-sdbus.h  service.c  service.h  servicebase.c  servicebase.h  servicesignal.c  servicesignal.h  xml2str.sh
src/common/: common.c  common.h  errcode.h  json.c  json.h  log.c  log.h
src/dcc-passkey-plugin/: CMakeLists.txt  passkey.json  passkeymodule.cpp  passkeymodule.h
src/dcc-passkey-plugin/module/: common.h  passkey.qrc  passkeymodel.cpp  passkeymodel.h  passkeyworker.cpp  passkeyworker.h
src/dcc-passkey-plugin/module/dbus/: dbuspasskey.cpp  dbuspasskey.h
src/dcc-passkey-plugin/operation/: common.h  passkeycontroller.cpp  passkeycontroller.h  passkeymodel.cpp  passkeymodel.h  passkeyworker.cpp  passkeyworker.h
src/dcc-passkey-plugin/operation/dbus/: dbuspasskey.h
src/dcc-passkey-plugin/operation/qrc/: passkey.qrc
src/dcc-passkey-plugin/qml/: PassKeyManager.qml  PassKeyPrepare.qml  ResetPasskeyDialog.qml  SetPinDialog.qml  passkey.qml  passkeyMain.qml
src/dcc-passkey-plugin/trans/: lupdate.sh
src/dcc-passkey-plugin/trans/translations/: dcc-passkey-plugin.ts
src/dcc-passkey-plugin/window/: passkeywidget.cpp  passkeywidget.h
src/dcc-passkey-plugin/window/widgets/: keypindialogctrl.cpp  keypindialogctrl.h  managewidget.cpp  managewidget.h  promptwidget.cpp  promptwidget.h  resetkeydialogctrl.cpp  resetkeydialogctrl.h
src/dcc6-passkey-plugin/: CMakeLists.txt
src/dcc6-passkey-plugin/operation/: common.h  passkeycontroller.cpp  passkeycontroller.h  passkeymodel.cpp  passkeymodel.h  passkeyworker.cpp  passkeyworker.h
src/dcc6-passkey-plugin/qml/: PassKeyManager.qml  PassKeyPrepare.qml  ResetPasskeyDialog.qml  SetPinDialog.qml  passkey.qml  passkeyMain.qml
src/decode/: aes.c  aes.h  b64.c  b64.h  decode.c  decode.h  evp.c  evp.h  hex.c  hex.h  rsa.c  rsa.h  sm2.c  sm2.h  sm4.c  sm4.h
src/dev/: cred.c  cred.h  dev.c  dev.h  info.c  info.h
src/rp/: rp.h
src/service/: CMakeLists.txt  err.c  err.h  main.c  manager.c  manager.h  service.c  service.h  servicedata.c  servicedata.h  serviceproperty.c  serviceproperty.h  servicesignal.c  servicesignal.h  xml2str.sh
src/service/decode/: b64.c  b64.h
src/service/dev/: cred.c  cred.h  dev.c  dev.h  info.c  info.h
src/service/rp/: rp.c
src/service/serviceframe/: servicebase.c  servicebase.h
testcode/: sm2_encrypt_test.c  sm2_sign_test.c
tests/: CMakeLists.txt  global_test_env.cpp  global_test_env.h  main.cpp  test_common.cpp  test_decode.cpp  test_err_code.cpp  test_json.cpp  test_service_decode.cpp  test_service_dev_bio.cpp  test_service_dev_info.cpp
